fixed grid overflowing tiles when resized

--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ header h1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   padding: 0;
   margin: 0;
 
